# libmeme

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  cabal.project.local  libclap.cabal  libmeme.cabal
DATS/: test.dats
SATS/: meme.sats
bench/: Bench.hs
foreign-src/: Export.hs
include/: libmeme.h
src/Text/: Clapify.hs  Convert.hs  Expand.hs  Spongebob.hs
src/Text/Convert/: BlackboardBold.hs  Bubble.hs  Common.hs  Fraktur.hs  Monospace.hs  Parens.hs  Script.hs  Smallcaps.hs  Wide.hs
test/: Spec.hs
