cabal-version: 1.18
name: libclap
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
synopsis: Efficient memes
description:
    libclap provides a pure Haskell library for inserting the clap emoji between words.
category: Text
build-type: Simple
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/vmchale/libclap

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Text.Clapify
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.4 && <5

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
